[s390]: EncodeISOArray generates wrong code when vector instructions are available

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • 10
    • b36
    • s390x
    • linux

        Failing jtreg tests:
        java/nio/charset/coders/BashStreams.java
        sun/nio/cs/TestStringCoding.java

        Failure is caused by misinterpretation of the condition code produced by vector instructions.

              Assignee:
              Lutz Schmidt
              Reporter:
              Lutz Schmidt
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: