8193443: [s390]: EncodeISOArray generates wrong vector code

Reviewed-by: goetz, mdoerr